--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "v1",
+    "@tailwindcss/forms": "^0.5.3",
+    "faker": "^6.6.6",
+    "firebase": "^9.13.0",
+    "moment": "^2.29.4",
     "next": "latest",
+    "next-auth": "4.0.0-beta.7",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-moment": "^1.1.2",
+    "recoil": "^0.7.6",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
